<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".activity.FunActivity">

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/iv1"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/iv2"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv3"
        app:layout_constraintStart_toEndOf="@id/iv1" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/iv3"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv2" />

    <TextView
        android:id="@+id/coinsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/coins"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btnGo"
        app:layout_constraintEnd_toStartOf="@id/tvCoins"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/coinsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coinsLabel"
        app:layout_constraintTop_toTopOf="@id/coinsLabel" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>